# dotos

./: .gitignore  Cargo.toml  Makefile  README.md  build.ninja  build.rs  build.sh  linker.ld
.cargo/: Config.toml  config.toml
src/: c.rs  log.rs  main.rs  panic.rs  panic_handler.rs  pointer_iter.rs  runtime.rs
src/arch/: boot.S  boot.rs  cpu.rs  mod.rs
src/arch/aarch32/: boot.S  boot.rs  cpu.rs  mod.rs  std.rs
src/arch/aarch64/: barrier.rs  boot.S  boot.rs  cpu.rs  exception.rs  exceptions.rs  mod.rs  statics.rs  task.rs  task.s  time.rs  timer.rs
src/arch/aarch64/cpu/: exception.rs  instructions.rs  mod.rs  registers.rs
src/arch/aarch64/syscall/: mod.rs  syscall.s
src/arch/aarch64/task/: mod.rs  task.s
src/arch/arm/: cpu.rs
src/board_support/: mod.rs
src/board_support/rpi/: mem.rs
src/board_support/rpi/io/: mod.rs  uart_console.rs
src/bsp/: mod.rs
src/bsp/device_driver/: mod.rs  system_timer.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs  gpio.rs  (+4 more)
src/bsp/raspberry_pi_3/: driver.rs  linker.ld  mem.rs  mod.rs
src/bsp/rpi/: driver.rs  mem.rs  mod.rs
src/bsp/rpi3/: cpu.rs  driver.rs  link.ld  mod.rs  statics.rs
src/common/: driver.rs  exception.rs  io.rs  mem.rs  mod.rs  scheduler.rs  serial_console.rs  state.rs  statics.rs  sync.rs  syscall.rs  task.rs  time_manager.rs
src/common/exception/: asynchronous.rs  mod.rs
src/common/memory/: interface.rs  mmu.rs  mod.rs
src/common/sync/: init_state_lock.rs  irq_safe_null_lock.rs  mod.rs
src/common/time/: mod.rs
src/common/time_manager/: clock.rs  scheduling.rs
(+42 files in other folders)
