[package]
name = "dotos"
version = "0.1.0"
authors = ["Łukasz Biel <lukasz.p.biel@gmail.com>"]
edition = "2018"

[dependencies]
cfg-if   = "1.0.0"
register = "1.0.2"
spin     = "0.9.0"
tock-registers = { git = "https://github.com/luke-biel/tock" }

[features]
default = ["board-rpi1", "aarch32"]
board-rpi1 = []
aarch32 = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[patch.crates-io]
tock-registers = { git = "https://github.com/luke-biel/tock" }
